# shellflip

./: .gitignore  Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: restarter.rs
src/: fdstore.rs  lib.rs  lifecycle.rs  pipes.rs  restart_coordination_socket.rs  shutdown.rs
testbins/basic/: Cargo.toml
testbins/basic/src/: main.rs
tests/: basic.rs
